Fixing spacing and alignment of main page.

--- a/css/about.css
+++ b/css/about.css
@@ -45,41 +45,3 @@ a{
 #banner nav ul {
 	margin: 30px 0px 0px 0px;
 }
-
-#content{
-	clear: both;
-	margin: 0 auto;
-	width: 600px;
-	font-size: 60px;
-	position: relative;
-	color: white;
-	top: 400px;
-	text-align: center;
-
-}
-
-#homeText{
-	font-size: 78px;
-	text-shadow: 2px 2px black;	
-}
-
-#comment{
-	font-size: 18px;
-}
-#buttons{
-	padding-left: 118px;
-}
-.button{
-	border-style: solid;
-	border-width: 3px;
-	border-color: white;
-	border-radius: 2px;
-	margin: 20px;
-	width: 130px;
-	height: 40px;
-	font-size: 30px;
-	float:left;
-	text-align: center;
-	padding-top: 3px; 
-
-}
